test/ui/lowering/out-of-line-modules/empty-subfolder-missing-file.stderr
error[E016]: could not load the module ‘shapeless’
  ┌─ ${TEST_FOLDER}/lowering/out-of-line-modules/empty-subfolder-missing-file/shapeless.lushui
  │
  ├─ ${TEST_FOLDER}/lowering/out-of-line-modules/empty-subfolder-missing-file.lushui:3:1
  │
3 │ module shapeless
  │ ════════════════
  │
 note: No such file or directory (os error 2)

error: aborting due to previous error

