test/ui/lowering/out-of-line-modules/empty-subfolder-missing-file.lushui
;;; TEST compiler-args --no-core

module shapeless

